<resources>
    <string name="app_name">Go Go Travel</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1443396689014073</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dangky">Đăng ký</string>
    <string name="boloc">Bộ lọc</string>

    <!-- Button text -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading</string>
    <string name="khong_nhap_du_thong_tin">"Vui lòng nhập đầy đủ thông tin!"</string>
    <string name="thong_bao_kiem_tra_mat_khau">"Mật khẩu phải có từ 6-12 kí tự!"</string>
    <string name="thanh_cong">"Đăng ký tài khoản thành công!"</string>
    <string name="that_bai">"Đăng ký không thành công. Vui lòng xem lại thông tin vừa nhập!"</string>

    <string-array name="danh_sach_bo_loc">
        <item>Không lọc</item>
        <item>Điểm</item>
        <item>Số lượt check in</item>
        <item>Số lượt yêu thích</item>
        <item>Mới nhất</item>
        <item>Gần tôi</item>
    </string-array>

    <string name="title_dialog">Bạn muốn lọc theo:</string>
    <string name="positive_button">OK</string>
    <string name="negative_button">Cancel</string>

    <string name="detail_yeuthich">Yêu thích</string>
    <string name="detail_checkin">Check-in</string>
    <string name="detail_xem">Số lượt xem</string>
    <string name="detail_hinhanh">Hình ảnh</string>

    <string name="Button_TatCa">Tất Cả</string>
    <string name="Button_DiaDiem">Địa Điểm</string>
    <string name="Button_QuanAn">Quán Ăn</string>
    <string name="Button_KhachSan">Khách Sạn</string>
    <string name="Button_Dialog_Huy">Hủy</string>
    <string name="Button_Dialog_ChiDuong">Chỉ Đường</string>

    <string name="google_map_key">AIzaSyAppVR5GGoF4TJphENULTiwyQ2_0Xcl_rs</string>

</resources>
