<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.edu.greenacademy.gogotravel.Fragment.MapFragment">

    <!-- TODO: Update blank fragment layout -->

    <fragment
        android:id="@+id/map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTatCa"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/Button_TatCa"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnDiaDiem"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/Button_DiaDiem"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnQuanAn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/Button_QuanAn"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnKhachSan"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/Button_KhachSan"
            android:textSize="10sp" />
    </LinearLayout>

</FrameLayout>
